# schemas

./: Makefile  README.md  pyproject.toml
scripts/: generate-schema.py
ta1/: README.md  example-line-types.txt  output-schemas.json  output-schemas.md  output-schemas.py  output.json  output.md  output.py
ta1/output-formats/: GeoPackage.md
ta2/: README.md  final-output.json  final-output.md  final-output.py  minmod_examplev0.ttl  minmod_examplev1.ttl  output.json  output.md  output.py
ta2/ttl_data/: minmod_example.ttl  minmod_example_hackathon_demo.ttl  minmod_examplev0.ttl  minmod_examplev1.ttl  minmod_examplev2.ttl  ontology.ttl
ta3/: README.md  geochem_output.py  geochemistry_input.json  geochemistry_input.md  geochemistry_input.py  input-schemas.py  input.json  input.md  input.py  output.json  output.md  output.py
