[tool.poetry]
name = "criticalmaas-schemas"
version = "0.1.0"
description = "Schemas for the DARPA CriticalMAAS project"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
erdantic = "^0.6.0"
geojson-pydantic = "^1.0.0"
jsonschema2md = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
